#155 update http client